[project]
name = "notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.1.3",
    "ipyleaflet>=0.19.2",
    "jupyter>=1.1.1",
    "numpy>=2.2.0",
    "pandas>=2.2.3",
    "ruff>=0.8.3",
    "streamlit-folium>=0.23.2",
    "streamlit>=1.41.1",
]
